<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_caracterizacion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@color/colorBlanco"
    tools:context=".fragments.CaracterizacionFragment">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_data"
                android:textSize="30sp"
                android:layout_margin="10dp"
                android:textColor="@color/colorUdeA"/>

            <LinearLayout
                android:id="@+id/userLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_below="@id/title">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    app:srcCompat="@drawable/caracterizacion1" />

                <EditText
                    android:id="@+id/user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="textPersonName"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/weight_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:layout_below="@id/userLinear">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    app:srcCompat="@drawable/caracterizacion2" />

                <EditText
                    android:id="@+id/weight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/weight"
                    android:inputType="numberDecimal"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/kg"
                    android:gravity="center"/>

                <EditText
                    android:id="@+id/height"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/height"
                    android:inputType="number"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cm"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ageLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_below="@id/weight_height">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    app:srcCompat="@drawable/caracterizacion3" />

                <EditText
                    android:id="@+id/age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/age"
                    android:inputType="date"
                    android:focusable="false"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/genderLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_below="@id/ageLinear">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    app:srcCompat="@drawable/caracterizacion4" />

                <RadioGroup
                    android:id="@+id/gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/man"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/man"
                        android:checked="true"/>

                    <RadioButton
                        android:id="@+id/woman"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/woman" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/physicalActivityLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_below="@id/genderLinear">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    app:srcCompat="@drawable/caracterizacion5" />

                <Spinner
                    android:id="@+id/physicalActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/physicalActivity"
                    android:focusable="false"/>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/scroll">

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/colorSave"
            android:text="@string/buttonSave"/>
    </LinearLayout>
</RelativeLayout>